# tree-sitter-svelte

./: .gitignore  .gitmodules  Cargo.toml  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml  dependencies.disabled  fuzz.yml  lint.yml  publish.disabled
bindings/node/: binding_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h  wasm_extra.h
test/corpus/: attach.txt  balancing.txt  each.txt  snippets.txt
